syntax = "proto3";
import "common/transaction.proto";
import "common/loan.proto";
import "common/payment.proto";
import "common/empty.proto";

option csharp_namespace = "PaymentsReadMicroservice";

package PaymentsReadMicroservice;

service PaymentsRead {
  rpc Get (GetPaymentsRequest) returns (GetPaymentsResult);
  rpc GetWithLoans (GetPaymentsWithLoansRequest) returns (GetPaymentsWithLoansResult);
  rpc GetTransactions (GetTransactionsRequest) returns (GetTransactionsResult);
  rpc Setup(SetupRequest) returns (Empty);
  rpc Update(UpdateRequest) returns (Empty);
}

message GetPaymentsRequest {
  int64 flowId = 1;
  repeated string ids = 2;
}

message GetPaymentsResult {
  repeated Payment payments = 1;
}

message GetPaymentsWithLoansRequest {
  int64 flowId = 1;
  int32 part = 2;
  int32 totalParts = 3;
  repeated string accountIds = 4;
}

message GetPaymentsWithLoansResult 
{
  repeated Payment payments = 1;
  repeated Loan loans = 2;
}

message GetTransactionsRequest {
  int64 flowId = 1;
  repeated string ids = 2;
}

message GetTransactionsResult {
  repeated Transaction transactions = 1;
}

message SetupRequest {
  repeated Payment payments = 1;
}

message UpdateRequest {
  repeated Payment payments = 1;
}